# egt-thermostat

./: Makefile.am  configure.ac
src/: thermostat.cpp
